--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@types/react-transition-group": "^4.4.11",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "14.2.15",
