--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.61.0",
     "@types/react-transition-group": "^4.4.11",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "14.2.15",
+    "next-sanity": "^9.5.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "sanity": "^3.61.0",
+    "sanity-plugin-media": "^2.3.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
